[project]
name = "rkllm-toolkit-cli"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"},
]
requires-python = ">= 3.10, <3.11"
dependencies = [
    "huggingface-hub>=0.29.1",
    "inquirer>=3.4.0",
    "rkllm-toolkit",
    "setuptools>=75.8.2",
    "typer>=0.15.1",
]

[project.scripts]
rkllm-toolkit = "rkllm_toolkit_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true

[tool.uv.sources]
rkllm-toolkit = { url = "https://github.com/airockchip/rknn-llm/raw/29a9fb97d14c773b6efa07415dce6ec91c7d8461/rkllm-toolkit/rkllm_toolkit-1.1.4-cp310-cp310-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "editables>=0.5",
    "isort>=5.13.2",
]
